--- a/index.html
+++ b/index.html
@@ -50,8 +50,7 @@
       </div>
       
       <model-viewer position="0 0 0" src="glb/stulstol3.glb" ar ar-modes="webxr scene-viewer quick-look fallback"
-      ar-scale="auto" auto-rotate camera-controls alt="model" ios-src="glb/stulstol3.usdz"
-                    skybox-image="glb/veranda_2k.hdr">
+      ar-scale="auto" auto-rotate camera-controls alt="model" ios-src="glb/stulstol3.usdz">
         </model-viewer>
     </div>
   </body>
